--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Web Search</title>
 </head>
 <body>
-    <h1>Web Search</h1>
+    <h1>Cyberminer</h1>
     <input type="text" id="search-input" placeholder="Search...">
     <button id="search-button">Search</button>
     <div id="search-results"></div>
