--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Cyberminer</h1>
+
+    <p><a href="CS4376 Presentation.pdf" target="_blank">View Presentation</a></p>
+    
     <input type="text" id="search-input" placeholder="Search...">
     <button id="search-button">Search</button>
     <div id="search-results"></div>
