--- a/web_search.html
+++ b/web_search.html
@@ -67,7 +67,7 @@
         <div class="search-container">
             <form>
                 <div class="form-floating">
-                    <input type="text" id="search-input" placeholder="Search the web..." class="form-control">
+                    <input type="text" id="search-input" placeholder="Search the web..." class="form-control form-control-lg">
                     <label for="search-input">Search the web...</label>
                 </div>
                 <button id="search-button" class="btn btn-primary">Search</button>
