--- a/web_search.html
+++ b/web_search.html
@@ -21,7 +21,7 @@
                         <a class="nav-link active" href="#" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a> 
+                        <a class="nav-link" href="https://cs-4376-assignment.vercel.app/CS%204376%20Presentation.pdf" target="_blank" rel="noopener">Presentation</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
