--- a/index.html
+++ b/index.html
@@ -3,16 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Search</title>
+    <title>Cyberminer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <h1>Cyberminer</h1>
-    <input type="text" id="search-input" placeholder="Search...">
-    <button id="search-button">Search</button>
-    <div id="search-results"></div>
-    <script src="script.js"></script>
-
-    <p><a href="CS 4376 Presentation.pdf" target="_blank">View Presentation</a></p>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Cyberminer</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" aria-current="page">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://cs-4376-assignment.vercel.app/CS%204376%20Presentation.pdf" target="_blank" rel="noopener">Presentation</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Login
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="loginDropdown">
+                            <li>
+                                <div class="dropdown-item">
+                                    <form id="loginForm" class="p-3" style="min-width: 300px;">
+                                        <h6 class="dropdown-header">Sign In</h6>
+                                        <div class="mb-3">
+                                            <label for="email" class="form-label">Email</label>
+                                            <input type="email" class="form-control" id="email" required>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="password" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="password" required>
+                                        </div>
+                                        <div class="mb-3 form-check">
+                                            <input type="checkbox" class="form-check-input" id="rememberMe">
+                                            <label class="form-check-label" for="rememberMe">
+                                                Remember me
+                                            </label>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary w-100">Sign In</button>
+                                        <div class="text-center mt-2">
+                                            <small><a href="#" class="text-decoration-none">Forgot password?</a></small>
+                                        </div>
+                                    </form>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     
+    <div class="container">
+        <h1>Cyberminer</h1>
+        <div class="search-container">
+            <form>
+                <div class="form-floating">
+                    <input type="text" id="search-input" placeholder="Search the web..." class="form-control form-control-lg">
+                    <label for="search-input">Search the web...</label>
+                </div>
+                <button id="search-button" class="btn btn-primary">Search</button>
+            </form>
+        </div>
+        <div id="search-results"></div>
+    </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
